test,rapport,diagramme, commentaires