@@ -1,70 +1,111 @@
 package com.fges.commands;
 
-import org.junit.jupiter.api.Test;
-
+import com.fges.application.CommandContext;
+import com.fges.grocerydata.GroceryItem;
 import com.fges.grocerydata.GroceryListManager;
+import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Arrays;
 
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
-import static org.assertj.core.api.Assertions.assertThat;
 
-public class HandleAddCommandTest {
+class HandleAddCommandTest {
 
     @Test
-    public void test_execute_should_return_1_when_args_are_missing() throws IOException {
+    void execute_shouldAddItemAndReturn0_whenAllArgsProvided() throws IOException {
         // Arrange
         GroceryListManager dao = mock(GroceryListManager.class);
-        HandleAddCommand command = new HandleAddCommand(dao);
-
-        List<String> args = List.of("add");
+        CommandContext ctx = new CommandContext(
+                Arrays.asList("add", "pâtes", "4"),
+                "épicerie",
+                "list.json"
+        );
 
         // Act
-        int result = command.execute(args);
+        int status = new HandleAddCommand(dao).execute(ctx);
 
         // Assert
-        assertThat(result).isEqualTo(1);
-        verify(dao, never()).addItem(any());
+        assertEquals(0, status);
+        ArgumentCaptor<GroceryItem> captor = ArgumentCaptor.forClass(GroceryItem.class);
+        verify(dao).addItem(captor.capture());
+        GroceryItem added = captor.getValue();
+        assertEquals("pâtes",    added.getName());
+        assertEquals(4,          added.getQuantity());
+        assertEquals("épicerie", added.getCategory());
     }
 
     @Test
-    public void test_execute_should_call_addItem_with_correct_values() throws IOException {
-        // Arrange
+    void execute_shouldUseDefaultCategory_whenCategoryIsNull() throws IOException {
+        //Arrange
         GroceryListManager dao = mock(GroceryListManager.class);
-        HandleAddCommand command = new HandleAddCommand(dao);
-
-        List<String> args = List.of("add", "pomme", "2", "fruit");
+        CommandContext ctx = new CommandContext(
+                Arrays.asList("add", "riz", "1"),
+                null,
+                "list.json"
+        );
 
         // Act
-        int result = command.execute(args);
+        int status = new HandleAddCommand(dao).execute(ctx);
 
         // Assert
-        assertThat(result).isEqualTo(0);
-        verify(dao).addItem(argThat(item ->
-                item.getName().equals("pomme") &&
-                item.getQuantity() == 2 &&
-                item.getCategory().equals("fruit")
-        ));
+        assertEquals(0, status);
+        ArgumentCaptor<GroceryItem> captor = ArgumentCaptor.forClass(GroceryItem.class);
+        verify(dao).addItem(captor.capture());
+        assertEquals("default", captor.getValue().getCategory());
     }
 
     @Test
-    public void test_execute_should_use_default_category_if_not_provided() throws IOException {
+    void execute_shouldReturn1_andNotCallDao_whenSourceOptionMissing() throws IOException {
         // Arrange
         GroceryListManager dao = mock(GroceryListManager.class);
-        HandleAddCommand command = new HandleAddCommand(dao);
-
-        List<String> args = List.of("add", "pomme", "2");
+        CommandContext ctx = new CommandContext(
+                Arrays.asList("add", "pomme", "2"),
+                "fruit",
+                null
+        );
 
         // Act
-        int result = command.execute(args);
+        int status = new HandleAddCommand(dao).execute(ctx);
 
         // Assert
-        assertThat(result).isEqualTo(0);
-        verify(dao).addItem(argThat(item ->
-                item.getName().equals("pomme") &&
-                item.getQuantity() == 2 &&
-                item.getCategory().equals("default")
-        ));
+        assertEquals(1, status);
+        verifyNoInteractions(dao);
+    }
+
+    @Test
+    void execute_shouldReturn1_andNotCallDao_whenNotEnoughArguments() throws IOException {
+        // Arrange
+        GroceryListManager dao = mock(GroceryListManager.class);
+        CommandContext ctx = new CommandContext(
+                Arrays.asList("add", "lait"),
+                "frais",
+                "list.json"
+        );
+
+        // Act
+        int status = new HandleAddCommand(dao).execute(ctx);
+
+        // Assert
+        assertEquals(1, status);
+        verifyNoInteractions(dao);
+    }
+
+    @Test
+    void execute_shouldThrowNumberFormatException_whenQuantityNotNumeric() {
+        // Arrange
+        GroceryListManager dao = mock(GroceryListManager.class);
+        CommandContext ctx = new CommandContext(
+                Arrays.asList("add", "jus", "abc"),
+                null,
+                "list.json"
+        );
+
+        //Act and Assert
+        assertThrows(NumberFormatException.class,
+                () -> new HandleAddCommand(dao).execute(ctx));
+        verifyNoInteractions(dao);
     }
 }
